--- a/src/main/resources/templates/page/cn/article.html
+++ b/src/main/resources/templates/page/cn/article.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?79096ca0d1067db8a662de9df3dddece";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -402,13 +412,6 @@
 
 <script type="text/javascript">
     var _hmt = _hmt || [];
-    (function () {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?1b2a9aec4c523c4bf017a7fdc9333187";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-    })();
-
 
     layui.use(['form', 'layer', 'upload'], function () {
         var form = layui.form
