--- a/src/main/resources/templates/page/cn/venue.html
+++ b/src/main/resources/templates/page/cn/venue.html
@@ -82,7 +82,7 @@ var _hmt = _hmt || [];
       <div class="background3" style="padding-left:55px; line-height: 60px; padding-bottom: 8px;">&nbsp;&nbsp;会议地点</div>
       <div class="public_p pb-20 pl-30">
 				<p class="f-b">酒店名称：曼谷塔瓦纳酒店 (The Tawana Bangkok, <a href=" http://www.tawanabangkok.com/" style="color: #102cf7" target="_blank"><u>http://www.tawanabangkok.com/ </u></a>)<br/>
-				地址：80 Surawongse Road, Bangrak, Bankok 10500 Thailand<br/>
+				地址：80 Surawongse Road, Bangrak, Bangkok 10500 Thailand<br/>
 				会议室: Murano Room<br/>
 				可通过Booking.com预定酒店房间: <a href="https://www.booking.com/hotel/th/tawana.zh-cn.html?aid=1633942;label=baidu-brand-list1;sid=a0ff97e5e37d5edbc4ed57d5453febf3;dest_id=-3414440;dest_type=city;dist=0;hapos=1;hpos=1;room1=A%2CA;sb_price_type=total;sr_order=popularity;srepoch=1560999642;srpvid=de89152dd7440131;type=total;ucfs=1&#hotelTmpl" style="color: #102cf7" target="_blank"><u>www.booking.com</u></a>
 				</p>
